--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -34,6 +34,17 @@
         opacity: 0.3;
     }
 
+    &--disabled {
+        opacity: 0.5;
+        cursor: default;
+
+        &:hover,
+        &:active{
+            opacity: 0.5;
+            cursor: default;
+        }
+    }
+
 }
 
 .alert {
@@ -55,4 +66,13 @@
         color: s.color(blue);
     }
 
+    &--disabled {
+        display: none;
+    }
+
+}
+.validation {
+    &--active {
+        border-color: s.color(red) !important; //!important - щоб перебити інші бордери
+    }
 }
