--- a/src/style/form.scss
+++ b/src/style/form.scss
@@ -76,3 +76,12 @@
         border-color: s.color(red) !important; //!important - щоб перебити інші бордери
     }
 }
+.link {
+    color: s.color(main);
+  
+    @include s.click;
+  }
+  
+  .link__prefix {
+    color: s.color(light);
+  }
